--- a/styles/style.css
+++ b/styles/style.css
@@ -32,7 +32,8 @@ nav.navbar {
 
 #about {
 	height: 88vh;
-	background-color: #c7d6e8;
+	background: linear-gradient(#9bc0e5, #bddeff);
+	
 }
 
 #navbar-brand {	
@@ -44,34 +45,12 @@ nav.navbar {
   width: 100%;
 }
 
-.aboutOverlay {
-  position: absolute;
-  bottom: 0;
-  left: 0;
-  right: 0;
-  background-color: #add6ff ;
-  overflow: hidden;
-  width: 100%;
-  height: 100%;
-  opacity: 0.4;
-
-}
-
 div#content {
 	margin-top: 150px;
 }
 
-div.parallax {
-	background-image: url("img/aboutimage2.jpg");
-	height: 100%;  
-	background-attachment: fixed;
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
-}
-
 div#intro {
-	margin-top: 100px;
+	margin-top: 150px;
 	color: #000;
 	padding: 20px 25px;
 	border-radius: 90px 0px;
@@ -79,23 +58,104 @@ div#intro {
 	text-align:justify-all;
 }
 
-#textUnderHeading {
-	font-size: 1.3em;
+#formStyle{
+	margin-top: 140px;
 }
 
-input[type=text], input[type=password], input[type=submit] {
+.userForm {
+	height: 100vh;
+	margin: 120px auto;
+}
+
+input[type=text], input[type=email], input[type=password], select {
+	width: 285px;
 	padding: 10px 20px;
-    margin: 2px 0 10px 0;
+	margin: 5px auto;
+	display: inline-block;
 	border: 1px solid #ccc;
-    border-radius: 4px;
-    box-sizing: border-box;
-    background-color: #ffd;
+	border-radius: 4px;
+	box-sizing: border-box;
+	background-color: #ffd;
 }
 
-input[type=submit] {
-	background-color: #555;
-	color: #ddd;
-	width: 120px;
+input[type=submit], input[type=reset] {
+	width: 135px;
+	height: 50px;
+	border: 1px solid #ccc;
+	border-radius: 4px;
+	box-sizing: border-box;
+	margin: 0 5px 0 5px;
+
+}
+
+input[type=reset] { 
+	font-weight: bold;
+	background-color: #ffd;
+ }
+
+/* Shared */
+.loginBtn {
+	width: 200px;
+  box-sizing: border-box;
+  position: relative;
+  /* width: 13em;  - apply for fixed size */
+  margin: 0.2em;
+  padding: 0 15px 0 46px;
+  border: none;
+  text-align: left;
+  line-height: 34px;
+  white-space: nowrap;
+  border-radius: 0.2em;
+  font-size: 14px;
+  color: #FFF;
+}
+.loginBtn:before {
+  content: "";
+  box-sizing: border-box;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 34px;
+  height: 100%;
+}
+.loginBtn:focus {
+  outline: none;
+}
+.loginBtn:active {
+  box-shadow: inset 0 0 0 32px rgba(0,0,0,0.1);
+}
+
+
+/* Facebook */
+.loginBtn--facebook {
+  background-color: #4C69BA;
+  background-image: linear-gradient(#4C69BA, #3B55A0);
+  /*font-family: "Helvetica neue", Helvetica Neue, Helvetica, Arial, sans-serif;*/
+  text-shadow: 0 -1px 0 #354C8C;
+}
+.loginBtn--facebook:before {
+  border-right: #364e92 1px solid;
+  background: url('https://s3-us-west-2.amazonaws.com/s.cdpn.io/14082/icon_facebook.png') 5px 5px no-repeat;
+}
+.loginBtn--facebook:hover,
+.loginBtn--facebook:focus {
+  background-color: #5B7BD5;
+  background-image: linear-gradient(#5B7BD5, #4864B1);
+}
+
+
+/* Google */
+.loginBtn--google {
+  /*font-family: "Roboto", Roboto, arial, sans-serif;*/
+  background: #DD4B39;
+}
+.loginBtn--google:before {
+  border-right: #BB3F30 1px solid;
+  background: url('https://s3-us-west-2.amazonaws.com/s.cdpn.io/14082/icon_google.png') 5px 5px no-repeat;
+}
+.loginBtn--google:hover,
+.loginBtn--google:focus {
+  background: #E74B37;
 }
 
 
