--- a/styles/style.css
+++ b/styles/style.css
@@ -59,7 +59,11 @@ div#intro {
 }
 
 #formStyle{
-	margin-top: 140px;
+	width: 360px;
+	margin-top: 100px;
+	padding: 20px;
+	background-color: #e5e5ff;
+	box-shadow: 1px 1px 5px blue;
 }
 
 .userForm {
@@ -75,7 +79,10 @@ input[type=text], input[type=email], input[type=password], select {
 	border: 1px solid #ccc;
 	border-radius: 4px;
 	box-sizing: border-box;
-	background-color: #ffd;
+	border: 0;
+	outline: 0;
+	background: transparent;
+	border-bottom: 1px solid gray;
 }
 
 input[type=submit], input[type=reset] {
