--- a/styles/style.css
+++ b/styles/style.css
@@ -62,8 +62,9 @@ div#intro {
 	width: 360px;
 	margin-top: 100px;
 	padding: 20px;
-	background-color: #e5e5ff;
-	box-shadow: 1px 1px 5px blue;
+	background-color: #f4f4ff;
+	box-shadow: 1px 1px 5px #000;
+	border-radius:3px;
 }
 
 .userForm {
@@ -76,11 +77,10 @@ input[type=text], input[type=email], input[type=password], select {
 	padding: 10px 20px;
 	margin: 5px auto;
 	display: inline-block;
-	border: 1px solid #ccc;
-	border-radius: 4px;
 	box-sizing: border-box;
 	border: 0;
 	outline: 0;
+	border-radius: 0;
 	background: transparent;
 	border-bottom: 1px solid gray;
 }
